<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="himanshu.ilovemarshmallow.Product_Info">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ProductProgress_bar"></ProgressBar>


   <ImageView
       android:id="@+id/product_image"
       android:layout_width="wrap_content"
       android:layout_height="200dp"
       android:layout_alignParentLeft="true"
       android:scaleType="centerCrop"
       />

    <TextView
        android:id="@+id/textProduct"
        android:layout_toRightOf="@id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prodcut"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/product_name"
        android:layout_below="@id/textProduct"
        android:layout_toRightOf="@id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        />


    <TextView
        android:id="@+id/textProductType"
        android:layout_below="@id/product_name"
        android:layout_toRightOf="@id/product_image"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        />
    <TextView
        android:id="@+id/product_type"
        android:layout_below="@id/textProductType"
        android:layout_toRightOf="@id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        />

    <TextView
        android:id="@+id/textProductPrice"
        android:layout_toRightOf="@id/product_image"
        android:layout_below="@id/product_type"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        />

    <TextView
        android:id="@+id/price"
        android:layout_below="@id/textProductPrice"
        android:layout_toRightOf="@id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        />

    <TextView
        android:id="@+id/textProductRating"
        android:layout_toRightOf="@id/product_image"
        android:layout_below="@id/price"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        />

    <TextView
        android:id="@+id/product_rating"
        android:layout_below="@id/textProductRating"
        android:layout_toRightOf="@id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        />

    <TextView
        android:id="@+id/textProductDesc"
        android:layout_below="@id/product_image"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        />

    <TextView
        android:id="@+id/product_desc"
        android:layout_below="@id/textProductDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        />


   <!-- <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_rating"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"

         ></ListView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/share"
        android:text="Share"/>-->

</RelativeLayout>
